Fix scrollbar wrapper

--- a/src/components/shared/schedule/ScheduleComponent.scss
+++ b/src/components/shared/schedule/ScheduleComponent.scss
@@ -132,8 +132,4 @@
             }
         }
     }
-
-    &.desktop {
-
-    }
 }
